# aoc2022

./: index.md  new.txt
02-1-rps/src/: main.rs
02-2-rps-sneaky/src/: main.rs
03-1-rucksack/src/: main.rs
03-2-rucksack/: Cargo.toml
05-1-crane/: Cargo.toml
05-1-crane/src/: main.rs
06-2-radio/: Cargo.toml
07-1-filesize/src/: main.rs
07-2-filesize/: Cargo.toml
07-2-filesize/src/: main.rs
08-2-treehouse/src/: main.rs
09-2-rope/src/: main.rs
1-1-calories/src/: main.rs
1-2-calories3/: Cargo.toml
1-2-calories3/src/: main.rs
10-1-crt/src/: main.rs
10-2-crt/: Cargo.toml
10-2-crt/src/: main.rs
11-1-monkey/: Cargo.toml
11-1-monkey/src/: main.rs
11-2-monkey/: Cargo.toml
11-2-monkey/src/: main.rs
12-1-search/: Cargo.toml
12-1-search/src/: main.rs
12-2-search/src/: main.rs
13-1-order/: Cargo.toml
13-1-order/data/: 2-garbage.txt  equal.txt
13-1-order/src/: main.rs
14-1-sand/: Cargo.toml
15-1-beacon/: Cargo.toml
15-2-beacon/: Cargo.toml
16-1-valve/: Cargo.toml
16-2-valve/: Cargo.toml
17-1-tetris/: Cargo.toml  repeat.txt
18-1-lava/: Cargo.toml
18-2-lava/: Cargo.toml
19-2-robot/: Cargo.toml
2-1-rps/: Cargo.toml
20-2-mixing/: Cargo.toml
21-2-monkeymath/: Cargo.toml
22-1-map/: Cargo.toml
22-2-map/: Cargo.toml  run.txt
23-1-diffuse/: Cargo.toml
24-1-blizzard/: Cargo.toml
24-2-blizzard/: Cargo.toml
24-2-blizzard/src/: main.rs
25-1-snafu/: Cargo.toml
3-1-rucksack/: Cargo.toml
4-1-range/: Cargo.toml
5-1-crane/: Cargo.toml
6-2-radio/: Cargo.toml
8-2-treehouse/: Cargo.toml
9-1-rope/: Cargo.toml
(+76 files in other folders)
